# ComfyUI_TRELLIS

./: 250327.json  README.md  TRELLIS_node.py  __init__.py  app.py  pyproject.toml  requirements.txt  trellis.json  utils.py  workflows1214.json  workflows1220.json
extensions/vox2seq/vox2seq/: _C.cp311-win_amd64.pyd
facebookresearch/dinov2/dinov2/hub/: backbones.py
trellis/pipelines/: __init__.py  trellis_image_to_3d.py  trellis_text_to_3d.py
trellis/renderers/: gaussian_render.py
trellis/representations/gaussian/: gaussian_model.py
trellis/representations/mesh/: cube2mesh.py
trellis/representations/mesh/flexicubes/: flexicubes.py
trellis/utils/: postprocessing_utils.py  render_utils.py
