[project]
name = "comfyui_trellis"
description = "you can use trellis in comfyUI"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_TRELLIS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_TRELLIS"
Icon = ""
